# uni-t-thermal-uti120

./: .flake8  .gitignore  99-uti120.rules  LICENSE  README.md  pyproject.toml  uti120M.sh
docs/: REVERSE_ENGINEERING.md  SHORTCUTS.md  TECHNICAL.md
uti120/: .flake8  __init__.py  __main__.py  calibration.py  camera.py  camera_thread.py  config.py  constants.py  daemon.py  graph.py  gui.py  palettes.py  processor.py  run_daemon.py  shutter_handler.py  surface3d.py  viewer.py  widgets.py
uti120/data/: nEmissCurve.npy
