[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uti120"
version = "1.0.0"
description = "UNI-T UTi120 Mobile Thermal Camera Webcam Daemon"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pyusb>=1.2,<2",
    "numpy>=1.24,<3",
    "opencv-python>=4.8,<5",
    "scipy>=1.11,<2",
]

[tool.setuptools.packages.find]
include = ["uti120*"]


[project.scripts]
uti120 = "uti120.viewer:main"

[project.optional-dependencies]
dev = ["ruff", "mypy"]
